--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@electron-forge/plugin-webpack": "^6.0.5",
     "@types/bcrypt": "^5.0.0",
     "@types/crypto-js": "^4.1.1",
+    "@types/node-xmpp-client": "^3.1.8",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
+    "@types/xmpp__xml": "^0.13.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
@@ -44,12 +47,15 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@xmpp/xml": "^0.13.1",
+    "2key-ratchet": "^1.0.18",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "crypto-js": "^4.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
     "node-vibrant": "^3.1.6",
+    "node-xmpp-client": "^3.2.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
