--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node-xmpp-client": "^3.1.8",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/sqlite3": "^3.1.8",
     "@types/uuid": "^9.0.1",
     "@types/xmpp__xml": "^0.13.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -59,6 +60,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.2"
+    "react-hook-form": "^7.43.2",
+    "sqlite3": "^5.1.6"
   }
 }
