--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.43.2",
+		"react-router-dom": "^6.10.0",
 		"sqlite3": "^5.1.6"
 	}
 }
