--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@electron-forge/maker-squirrel": "^6.0.5",
 		"@electron-forge/maker-zip": "^6.0.5",
 		"@electron-forge/plugin-webpack": "^6.0.5",
+		"@types/node-xmpp-client": "^3.1.8",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@types/sqlite3": "^3.1.8",
@@ -48,8 +49,9 @@
 	},
 	"dependencies": {
 		"@xmpp/xml": "^0.13.1",
-		"axios": "^1.3.4",
+		"axios": "^1.3.6",
 		"electron-squirrel-startup": "^1.0.0",
+		"node-xmpp-client": "^3.2.0",
 		"path": "^0.12.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
