--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@electron-forge/maker-squirrel": "^6.0.5",
 		"@electron-forge/maker-zip": "^6.0.5",
 		"@electron-forge/plugin-webpack": "^6.0.5",
+		"@types/color-hash": "^1.0.2",
 		"@types/node-xmpp-client": "^3.1.8",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
@@ -50,6 +51,7 @@
 	"dependencies": {
 		"@xmpp/xml": "^0.13.1",
 		"axios": "^1.3.4",
+		"color-hash": "^2.0.2",
 		"electron-squirrel-startup": "^1.0.0",
 		"node-vibrant": "^3.1.6",
 		"node-xmpp-client": "^3.2.0",
