--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"axios": "^1.3.4",
 		"color-hash": "^2.0.2",
 		"electron-squirrel-startup": "^1.0.0",
+		"moment": "^2.29.4",
 		"node-xmpp-client": "^3.2.0",
 		"path": "^0.12.7",
 		"react": "^18.2.0",
