--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"@electron-forge/maker-zip": "^6.0.5",
 		"@electron-forge/plugin-webpack": "^6.0.5",
 		"@types/color-hash": "^1.0.2",
+		"@types/dotenv": "^8.2.0",
+		"@types/dotenv-webpack": "^7.0.3",
 		"@types/node-xmpp-client": "^3.1.8",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
@@ -36,6 +38,8 @@
 		"@typescript-eslint/parser": "^5.0.0",
 		"@vercel/webpack-asset-relocator-loader": "1.7.3",
 		"css-loader": "^6.0.0",
+		"dotenv": "^16.0.3",
+		"dotenv-webpack": "^8.0.1",
 		"electron": "^23.2.4",
 		"electron-is-dev": "^2.0.0",
 		"eslint": "^8.0.1",
@@ -43,6 +47,7 @@
 		"fork-ts-checker-webpack-plugin": "^7.2.13",
 		"node-loader": "^2.0.0",
 		"prettier": "^2.8.7",
+		"react-error-overlay": "^6.0.9",
 		"style-loader": "^3.0.0",
 		"ts-loader": "^9.2.2",
 		"ts-node": "^10.0.0",
