Updated to xmppjs

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,5 +1,5 @@
-EJABBERD_HOST=EJABBED_HOST
-EJABBERD_PORT=PORT
+EJABBERD_SERVICE=SERVICE
+EJABBERD_DOMAIN=DOMAIN
 
 DEFAULT_LOCAL_DATABASE=src/main.db
 
