--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
 		"typescript": "~4.5.4"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.4.0",
+		"@fortawesome/free-solid-svg-icons": "^6.4.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@xmpp/client": "^0.13.1",
 		"axios": "^1.3.4",
 		"color-hash": "^2.0.2",
